:recycle: refactor: Swagger of tasks for new arquiteture
